# trollflow2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  deploy-sdist.yaml
continuous_integration/: environment.yaml
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  launcher.rst  logging.rst  plugins.rst  product_list.rst
examples/: pl.yaml
examples/docker/: README
examples/docker/build_dir/: Dockerfile  Dockerfile_dev  Dockerfile_stable  entrypoint.sh  requirements.txt  requirements_dev.txt  requirements_stable.txt
examples/docker/config_ears_avhrr/: README  gatherer_ears_avhrr.ini  supervisord.conf  trollflow2_ears_avhrr.yaml  trollstalker.ini  trollstalker_logging.ini
examples/docker/config_ears_viirs/: README  gatherer_ears_viirs.ini  segment_gatherer_ears_viirs.ini  supervisord.conf  trollflow2_ears_viirs.yaml  trollstalker.ini  trollstalker_logging.ini
examples/docker/config_seviri_hrit/: README  products.yaml  segment_gatherer.yaml  supervisord.conf  trollflow2_seviri_hrit.yaml  trollstalker.ini  trollstalker_logging.ini
examples/docker/input/: README
examples/docker/logs/: README
examples/docker/output/: README
trollflow2/: __init__.py  _version.py  cli.py  coverage.py  dict_tools.py  launcher.py  logging.py  s3_utils.py  satpy_launcher.py
trollflow2/plugins/: __init__.py  s3.py
trollflow2/tests/: __init__.py  test_cli.py  test_dict_tools.py  test_launcher.py  test_logging.py  test_s3_plugins.py  test_trollflow2.py  utils.py
