[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trollflow2"
dynamic = ["version"]
description = "Pytroll workflow execution framework"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Adam Dybbroe" },
    { name = "Gerrit Holl" },
    { name = "Panu Lahtinen" },
    { name = "Paulo Medeiros" },
    { name = "Ondrej Nedelcev" },
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "dpath>=2.1.0",
    "posttroll>=1.10.0",
    "pyorbital",
    "pyyaml",
    "satpy>=0.32.0",
    "trollsift",
]

[project.scripts]
satpy_cli = "trollflow2.cli:cli"
"satpy_launcher.py" = "trollflow2.satpy_launcher:main"

[project.urls]
Homepage = "https://github.com/pytroll/trollflow2"

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "rasterio>=1.4.3",
    "pytroll-schedule",
    "s3fs>=2025.9.0",
    "netcdf4>=1.7.2",
    "bokeh>=3.8.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "trollflow2/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/trollflow2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["A", "E", "W", "TID", "T10"]
# to add in the future: "Q", "I", "N", "PT", "S", "T20", "C90", "F", "B", "D"

[tool.ruff.lint.per-file-ignores]
"trollflow2/tests/*" = ["S101"]  # assert allowed in tests
"doc/source/conf.py" = ["D100", "A001"]  # sphinx misbihaving
"trollflow2/_version.py" = ["D100", "Q000"]  # automatically generated by hatch-vcs

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10
